# toy-models

./: README.md  setup.cfg
notebooks/: 221015_training.ipynb
toymodels/: features.py  model.py
