[metadata]
name = toymodels
version = 0.0.0
description = Messing around
long_description = file: README.rst
keywords = Transformers, NLP, AI, Interpretability
maintainer = Nicholas Turner
maintainer_email = nicholaslarryturner@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    python_version>="3.7"
    torch
